--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,10 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.PomodoroApp"
         tools:targetApi="31">
-
+        <activity
+            android:name=".domain.Cadastro"
+            android:exported="false" />
         <activity
             android:name=".presentation.App"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="locked">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,12 +29,12 @@
         </activity>
         <activity
             android:name=".domain.Login"
-            android:exported="true">
-        </activity>
+            android:exported="true"
+            android:screenOrientation="locked"></activity>
         <activity
             android:name=".presentation.MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"
+            android:screenOrientation="locked"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
